M4P6.txt
Python 3.14.5 (tags/v3.14.5:5607950, May 10 2026, 10:43:50) [MSC v.1944 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>>
>>> pps= 21
>>> cp= 20
>>> qnty= 100
>>> Value=(cp-pps) * qnty
>>> print(Value)
-100
>>> if value<0 print(losing money on stocks)
  File "<python-input-6>", line 1
    if value<0 print(losing money on stocks)
               ^^^^^
SyntaxError: invalid syntax
>>>    if value<0 print("losing money on stocks")
  File "<python-input-7>", line 1
    if value<0 print("losing money on stocks")
IndentationError: unexpected indent
>>> f Value<0 print("losing money on stocks")
  File "<python-input-8>", line 1
    f Value<0 print("losing money on stocks")
      ^^^^^
SyntaxError: invalid syntax
>>> if Value<0 print("losing money on stocks")
  File "<python-input-9>", line 1
    if Value<0 print("losing money on stocks")
               ^^^^^
SyntaxError: invalid syntax
>>> if Value>0: print("making money on stocks")
... else:print("losing money on stocks")
... print(Value)
...
losing money on stocks
-100
>>>
